test/pass/api/list/list_fill_with_zero_values.lly
if List::fill(0, [1, 2, 3]) != []:
    stderr.print("Failed.")
